# one-offs

./: README.md  one-offs.code-workspace
haskell/approval-voting/: CHANGELOG.md  approval-voting.cabal
haskell/approval-voting/app/: ApprovalVoting.hs
haskell/functions/: functions.cabal
haskell/functions/app/: Functions.hs
haskell/voting/: CHANGELOG.md  LICENSE  voting.cabal
haskell/voting/app/: Voting.hs
kotlin/cedarboxkotlin/: settings.gradle.kts
kotlin/cedarboxkotlin/app/: build.gradle.kts
kotlin/cedarboxkotlin/app/src/main/: AndroidManifest.xml
kotlin/cedarboxkotlin/app/src/main/res/menu/: menu_main.xml
kotlin/cedarboxkotlin/app/src/main/res/navigation/: nav_graph.xml
kotlin/cedarboxkotlin/gradle/wrapper/: gradle-wrapper.properties
kotlin/krules/: settings.gradle.kts
kotlin/krules/gradle/wrapper/: gradle-wrapper.properties
kotlin/krules/src/main/kotlin/: Main.kt
multi-py/loci-paint/: main.py  pyproject.toml
multi-rust/cedarbox/: Cargo.toml  policy.cedar
multi-rust/cedarbox/migrations/: 20250527224111_initial.sql
multi-rust/cedarbox/src/: main.rs
multi-rust/compress-image/: Cargo.toml  ChatGPT Image Jun 3, 2025 at 12_44_12 PM.avif
multi-rust/compress-image/src/: main.rs
multi-rust/hot_dog/: Cargo.toml  dogs.txt  hotdog.db
multi-rust/hot_dog/src/: backend.rs  main.rs
multi-rust/hot_dog/src/components/: favorites.rs  view.rs
multi-rust/mnemonic-generator/: Cargo.toml  Dioxus.toml  package-lock.json
multi-rust/mnemonic-generator/assets/: tailwind.css
multi-rust/mnemonic-generator/src/: main.rs
multi-rust/parse_nmap/: Cargo.toml
multi-rust/parse_nmap/src/: main.rs
python/: 2025-05-30-openrouter.py  2025-06-01-voting.py  pyproject.toml
rust/src/: main.rs  voting.rs
swift/cedarbox-app/cedarbox-app/: ContentView.swift  cedarbox_appApp.swift
swift/cedarbox-app/cedarbox-app.xcodeproj/: project.pbxproj
swift/cedarbox-app/cedarbox-appTests/: cedarbox_appTests.swift
swift/cedarbox-app/cedarbox-appUITests/: cedarbox_appUITests.swift  cedarbox_appUITestsLaunchTests.swift
(+9 files in other folders)
