[package]
name = "cedarbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cedar-policy = "4.4.1"
jiff = "0.2.14"
jiff-sqlx = { version = "0.1.1", features = ["sqlite"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite", "macros"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
uuid = {version = "1.17.0", features = ["v4"]}

[dev-dependencies]
sqlx-cli = { version = "0.8.6", features = ["sqlite", "rustls"] }
